# chatcon

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.ts
icons/: icon.icns
src/: main.rs
src/client/youtube/: mod.rs
src/client/youtube/channel/: mod.rs
src/utils/: constants.rs  http.rs  mod.rs
ui/: index.html  tsconfig.json
ui/src/: App.css  App.tsx  styles.css
ui/src/components/: ChatArea.tsx  InputArea.tsx
ui/src/lib/: example.chatEvent.ts
