[package]
name = "chatcon"
version = "0.0.1-beta"
edition = "2021"
authors = ["wovnep"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
const_format = "0.2.30"
tauri = { version = "1.2", features = ["shell-open"] }
[features]
custom-protocol = ["tauri/custom-protocol"]
